#230308_버튼, 뱃지 컴포넌트 작업중

--- a/assets/scss/common/_reset.scss
+++ b/assets/scss/common/_reset.scss
@@ -3,8 +3,8 @@
 * { margin: 0; padding: 0; border: 0; outline: 0; text-size-adjust: none; -webkit-tap-highlight-color: transparent; }
 html { -webkit-overflow-scrolling: touch; -ms-overflow-scrolling: touch; text-size-adjust: none; text-size-adjust: none; }
 
-/* »Æ¿Œ */
-body { width: 100%; min-width: 320px; line-height: 1.25em; background: #fff; letter-spacing: -0.05em; font-family: 'NotoSansKR', sans-serif !important; }
+/*  gg */
+body { width: 100%; min-width: 320px; line-height: 1.25; background: #fff; letter-spacing: -0.05em; font-family: 'NotoSansKR', sans-serif !important; }
 header, article, footer { background: #fff; }
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
 audio, canvas, progress, video { display: inline-block; vertical-align: baseline; }
@@ -16,7 +16,7 @@ blockquote, q { quotes: none; }
 blockquote:before, blockquote:after, q:before, q:after { content: ''; }
 h1, h2, h3, h4, h5, h6 { font-size: 14px; font-weight: 400; color: $text_primary; }
 img, fieldset { border: 0 none; }
-button { border: 0 none; }
+button { border: 0 none; cursor:pointer; background:transparent; outline: none; appearance: none; }
 legend, caption { display: none; clear: both; }
 button, input, textarea, select, table { line-height: inherit; margin: 0; font-size: inherit; font-family: inherit; }
 table { border-spacing: 0; border-collapse: collapse; }
