--- a/assets/scss/vars/_colors.scss
+++ b/assets/scss/vars/_colors.scss
@@ -9,6 +9,7 @@ $text_neutral: #9b9b9b;
 /* ================ border-color ================ */
 $border_default: #e3e3e4;
 $border_thin: #ccc;
+$border_black: #000;
 
 /* ================ btn-color ================ */
 $btn_primary: #000;
