--- a/assets/scss/vars/_mixins.scss
+++ b/assets/scss/vars/_mixins.scss
@@ -13,7 +13,7 @@
   margin: $top auto $bottom auto;
 }
 
-/** mixins 扁粮 亲格 昏力窍瘤 富绊 货肺 眠啊窍扁. */
+/** mixins 旮办〈 頃 靷牅頃橃 毵愱碃 靸堧 於旉皜頃橁赴. */
 @mixin flex_box($jc, $ai) {
   display: flex;
   justify-content: $jc;
