#230309_헤더, 푸터 작업

--- a/assets/scss/global/_button.scss
+++ b/assets/scss/global/_button.scss
@@ -77,3 +77,25 @@
 }
 
 
+/* icon Button */
+.btn_ico {
+  display: block;
+  &-prev_w {
+    background-image:iconImg(prev,fff)
+  }
+  &-prev_b {
+    background-image:iconImg(prev)
+  }
+  &-search {
+    background-image:iconImg(search)
+  }
+  &-setting {
+    background-image:iconImg(setting)
+  }
+  &-alarm {
+    background-image:iconImg(bell)
+  }
+  &-cart {
+    background-image:iconImg(cart)
+  }
+}
