--- a/assets/scss/global/_icon.scss
+++ b/assets/scss/global/_icon.scss
@@ -28,11 +28,11 @@
 
   /* iconList */
   &-marketOff{background-image:iconImg(marketOff,aeaeae) }
-  &-marketOn{background-image:iconImg(marketOn,424242)}
+  &-marketOn{background-image:iconImg(marketOn)}
   &-todayOff{background-image:iconImg(todayOff,aeaeae)}
-  &-todayOn{background-image:iconImg(todayOn,424242)}
+  &-todayOn{background-image:iconImg(todayOn)}
   &-homeOff{background-image:iconImg(homeOff,aeaeae)}
-  &-homeOn{background-image:iconImg(homeOn,424242)}
+  &-homeOn{background-image:iconImg(homeOn)}
 
   &-play{background-image:iconImg(play)}
   &-chevronR{background-image:iconImg(chevronR)}
