--- a/assets/scss/global/_input.scss
+++ b/assets/scss/global/_input.scss
@@ -1,1 +1,58 @@
 .input{width:100%; }
+
+.g_text-brand{display:flex; justify-content:flex-start; align-items:center; width:100%; margin:24px 0; position:relative; }
+.g_text-brand_input{flex:1 1 auto; width:100%; height:40px; border:0 none; background:#fff; }
+.g_text-brand_label{position:absolute; font-size:14px; font-weight:normal; color:#b1b0af; top:50%; left:0; transform:translateY(-50%); transition:all .3s ease; pointer-events:none; }
+.g_text-brand_border{position:absolute; bottom:.5px; width:100%; height:3px; background:linear-gradient(to right, #ff5477 50%, transparent 50%); background-color:transparent; background-size:200% 100%; background-position:100% 0; transition:all .4s ease;  }
+.g_text-brand_border::before{content:''; display:block; position:absolute; left:0; bottom:0; width:100%; height:1px; background:#dfdfdf; }
+.g_text-brand_desc{position:absolute; bottom:2px; left:0; font-size:12px; font-weight:normal; color:#ff5477; opacity:0; transition:all .2s cubic-bezier(0.550, 0.085, 0.680, 0.530); z-index:0;}
+.g_text-brand_btn{flex:0 0 36px; display:none; top:0; right:0; width:36px; height:40px; font-size:0; text-indent:-9999px; transition:all 0.2s ease; z-index:10; }
+.g_text-brand_btn.btn_close{background:url("https://image.club5678.com/imgs/mobile/new_club/btn/btn_auth_clear.png") no-repeat center; background-size:12px;}
+.g_text-brand_btn.btn_slct{background:url("https://image.club5678.com/imgs/mobile/new_club/ico/ico_bullet_down_b.png") no-repeat center; background-size:7px auto;}
+.g_text-brand_btn.btn_pwd-off{background:url("https://image.club5678.com/imgs/mobile/new_club/ico/ico_view_count_g.png") no-repeat center; background-size:100% auto;}
+.g_text-brand_btn.btn_pwd-on{background:url("https://image.club5678.com/imgs/mobile/new_club/ico/ico_view_count_b.png")no-repeat center; background-size:100% auto;}
+
+.g_text-brand_hidden{position:absolute; top:50%; left:25px; transform:translateY(-50%); width:63px; height:8px; background:url("https://image.club5678.com/imgs/mobile/new_club/ico/ico_input_hidden.png") no-repeat center; background-size:auto 8px; font-size:0; text-indent:-9999px; z-index:8; cursor:text; pointer-events:none; }
+
+.g_text-brand_input:focus ~ .g_text-brand_label{color:#ff5477; }
+.g_text-brand_input:focus ~ .g_text-brand_label,
+.g_text-brand_input:valid ~ .g_text-brand_label{top:-8px; font-size:12px; font-weight:500;}
+.g_text-brand_input:focus ~ .g_text-brand_border{width:100%; height:3px; background-position:0 0 ;}
+.g_text-brand_input:focus{outline:none; border:0 none; }
+
+.g_text-brand_btn.on{display:block; }
+.g_text-brand_desc.on{bottom:-18px; opacity:1; transition:all .3s ease; z-index:1; }
+
+
+.text_field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 24px 0;
+  position: relative;
+
+  &__input {
+    flex: 1 1 auto;
+    width: 100%;
+    height: 40px;
+    border: 0 none;
+    background-color: $bg_white;
+
+  }
+  &__label {
+
+  }
+  &__border {
+
+  }
+  &__desc {
+
+  }
+  &__btn {
+    &-close {}
+    &-slct {}
+    &-pwd_off {}
+    &-pwd_on {}
+  }
+}
