--- a/assets/scss/vars/_colors.scss
+++ b/assets/scss/vars/_colors.scss
@@ -11,6 +11,13 @@ $border_default: #e3e3e4;
 $border_thin: #ccc;
 $border_black: #000;
 
+/* ================ bg-color ================ */
+$bg_primary: #000;
+$bg_secondary: #e6e6e6;
+$bg_info: #ffd600;
+$bg_inactive: #f7f7f7;
+$bg_white: #fff;
+
 /* ================ btn-color ================ */
 $btn_primary: #000;
 $btn_secondary: #e6e6e6;
