--- a/assets/scss/global/_footer.scss
+++ b/assets/scss/global/_footer.scss
@@ -1,1 +1,68 @@
 .footer{width:100%; }
+.main_footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 50%;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  transform: translateX(-50%);
+  &__box {
+    flex: 0 0 auto;
+    width: 25%;
+    height: 100%;
+  }
+
+  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-top: 36px;
+    text-align: center;
+    background-size: 20px auto;
+    background-position: top 12px center;
+    background-repeat: no-repeat;
+    @include font_default(13px, 400, $text_secondary);
+    box-sizing: border-box;
+  }
+
+  &__btn-mypage {
+    position: relative;
+  }
+  &__user {
+    position: absolute;
+    top: 6px;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    border: 1px solid $border_default;
+    border-radius: 50%;
+    object-fit: cover;
+    transform: translateX(-50%);
+  }
+}
+
+.sub_footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 50%;
+  bottom: 0;
+  width: 100%;
+  height: 62px;
+  padding: 8px 15px;
+  gap: 10px;
+  box-sizing: border-box;
+  transform: translateX(-50%);
+  &-split {
+    button:first-of-type {
+      flex: 0 0 46px;
+      width: 46px;
+      height: 46px;
+      border-radius: 12px;
+    }
+  }
+}
