#230311_카드, 검색창영역 작업중

--- a/assets/scss/global/_button.scss
+++ b/assets/scss/global/_button.scss
@@ -98,4 +98,10 @@
   &-cart {
     background-image:iconImg(cart)
   }
+  &-play {
+    background-image:iconImg(play)
+  }
+  &-play_w {
+    background-image:iconImg(play, fff)
+  }
 }
