--- a/assets/scss/global/_card.scss
+++ b/assets/scss/global/_card.scss
@@ -1,6 +1,6 @@
 .card{width:100%; }
 
-/* =========== productCard 타입별로 =========== */
+/* =========== productCard =========== */
 .basic_card {
   width: 130px;
   margin-right: 8px;
@@ -43,9 +43,9 @@
   }
   .card__txt {
     @include font_default(13px, 400, $text_tertiary)
-
   }
 }
+
 .wide_card {
   width: 320px;
   height: 270px;
@@ -81,13 +81,25 @@
     }
   }
   .card__info {
+    position: relative;
     width: 100%;
-    height: 74px;
+    height: 110px;
     padding: 20px;
     box-sizing: border-box;
     overflow: hidden;
 
-    background:#ffe9e9;
+    .price {
+      display: flex;
+      justify-content: flex-end;
+      position: absolute;
+      bottom: 10px;
+      right: 12px;
+    }
+    .score {
+      position: absolute;
+      bottom: 10px;
+      left: 20px;
+    }
   }
   .card__txt {
     @include font_default(16px, 700, $text_tertiary);
@@ -95,13 +107,222 @@
 }
 
 .list_card {
-  .card__thumb {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
+  .card__thumb {
+    flex: 0 0 auto;
+    position: relative;
+    width: 90px;
+    height: 90px;
+    margin-right: 12px;
+    border-radius: 16px;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      object-fit: cover;
+    }
+    button {
+      position: absolute;
+      bottom: 8px;
+      right: 8px;
+      width: 30px;
+      height: 30px;
+      // background-size: 20px auto;
+    }
   }
   .card__info {
-
+    flex: 1 1 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-direction: column;
+    width: calc(100% - 130px);
+    height: 90px;
+    padding: 8px 0;
   }
   .card__txt {
 
+  }
+}
+
+.cart_card {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  height: 68px;
+  padding: 10px 12px;
+  border: 1px solid $border_default;
+  border-radius: 10px;
+  background-color: $bg_white;
+  box-sizing: border-box;
+  .card__thumb {
+    width: 48px;
+    height: 48px;
+    margin-right: 10px;
+    border: 1px solid $border_default;
+    border-radius: 8px;
+    background-color: $bg_white;
+    box-sizing: border-box;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 8px;
+      object-fit: cover;
+    }
+  }
+  .card__info {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .card__txt {
+    margin-bottom: 4px;
+    @include font_default(13px, 400, $text_primary);
+  }
+}
+
+/* =========== cnslrCard =========== */
+.cnslr{
+  &_card {
+    display: block;
+    width: 330px;
+    padding: 24px 20px 16px;
+    border-radius: 12px;
+    background-color: $bg_white;
+    box-shadow: 0 0 8px rgba(0,0,0,.16);
+    box-sizing: border-box;
+
+    .score {
+      margin-bottom: 6px;
+    }
+    .badge {
+      margin-right: 4px;
+    }
+  }
+  &__box {
+    position: relative;
+    width: 100%;
+    min-height: 124px;
+    padding-bottom: 16px;
+    margin-bottom: 8px;
+    border-bottom: 1px solid $border_default;
+    box-sizing: border-box;
+  }
+  &__info {
+    width: calc(100% - 90px);
+    margin-bottom: 40px;
+
+  }
+  &__thumb {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 80px;
+    height: 80px;
+    border: 1px solid $border_thin;
+    border-radius: 50%;
+    background-color: $bg_white;
+    overflow: hidden;
+    box-sizing: border-box;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
+  &__price {
+    @include font_default(16px, 700, $text_primary);
+  }
+  &__row {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin-bottom: 12px;
+  }
+  &__name {
+    margin-right: 6px;
+    @include font_default(16px, 700, $text_primary);
+  }
+  &__greet {
+    width: 100%;
+    @include font_default(13px, 400, $text_tertiary);
+    @include text_cut;
+  }
+
+  &__btm {
+    min-height: 50px;
+  }
+}
+
+.cnslr__grade {
+  display: inline-block;
+  padding-right: 20px;
+  @include font_default(12px, 400, $text_neutral);
+  &-1 {
+    background: url("@/assets/img/ico_grade01.png") no-repeat right bottom;
+    background-size: 16px auto;
+  }
+  &-2 {
+    background: url("@/assets/img/ico_grade02.png") no-repeat right bottom;
+    background-size: 16px auto;
+  }
+  &-3 {
+    background: url("@/assets/img/ico_grade03.png") no-repeat right bottom;
+    background-size: 16px auto;
+  }
+  &-4 {
+    background: url("@/assets/img/ico_grade04.png") no-repeat right bottom;
+    background-size: 16px auto;
+  }
+  &-5 {
+    background: url("@/assets/img/ico_grade05.png") no-repeat right bottom;
+    background-size: 16px auto;
+  }
+}
+
+
+/* =========== userCard =========== */
+.user {
+  &_card {
+
+  }
+
+  &__thumb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    margin-right: 12px;
+    border-radius: 20px;
+    overflow: hidden;
+    img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      overflow: hidden;
+      object-fit: cover;
+    }
+  }
+
+  &__info {
+    margin-top: 12px;
+  }
+  &__grade {
+    margin-bottom: 2px;
+    @include font_default(13px, 400, $text_secondary);
+  }
+  &__name {
+    width: 100px;
+    margin-bottom: 16px;
+    @include font_default(16px, 700, $text_primary, -.1em);
+    @include text_cut;
   }
 }
