--- a/assets/scss/common/_pc.scss
+++ b/assets/scss/common/_pc.scss
@@ -1,4 +1,27 @@
+.pc__container{
+  width: 100vw;
+  min-height: 100vh;
+  background: #fff;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+button.component__lst.temp{position:fixed; left:20px; top:60px; width:100px; text-align:center; z-index:9999; }
+a.component__link.temp{position:fixed; left:140px; top:60px; width:100px; text-align:center; z-index:9999; }
 @media (min-width:520px) {
-	.pc__bg{position:relative; width:100%; background:#f1f1f1 !important; overflow-y:scroll; }
-	.pc__container{width:520px; margin:0 auto; position:relative; border-left:1px solid #dfdfdf; border-right:1px solid #dfdfdf; background:#fff; min-height:100vh;  }
+	.pc__bg{
+    position: relative;
+    width: 100%;
+    background-color: #f1f1f1 !important;
+    overflow-y: scroll;
+  }
+	.pc__container{
+    width: 520px;
+    margin: 0 auto;
+    position: relative;
+    border-left: 1px solid #dfdfdf;
+    border-right: 1px solid #dfdfdf;
+    overflow-x: visible;
+  }
+  button.component__lst.temp {position:fixed; left:50%; top:80px; margin-left:260px; }
+  a.component__link.temp{position:fixed; left:50%; top:30px; margin-left:260px;  }
 }
